[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/misc/firesaw.png" type="Texture" id=1]
[ext_resource path="res://scripts/misc/FireSaw.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/flame_particle.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "SPIN"
length = 1.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 600.0

[sub_resource type="Curve" id=1]
min_value = -1.0
_data = [ Vector2( 0.0229358, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.986238, 1 ), 2.63796, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = -0.35
orbit_velocity_random = 0.0
hue_variation = -0.6
hue_variation_random = 0.04
hue_variation_curve = SubResource( 7 )

[node name="FireSaw" type="Area2D" groups=["Fireball"]]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 20, 20 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SPIN"
anims/RESET = SubResource( 2 )
anims/SPIN = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 1.64261, 2.45024 )
scale = Vector2( 0.466732, 1.03282 )
polygon = PoolVector2Array( -23.7446, -48.8471, -54.9407, -212.283, 49.616, -160.386, 29.0475, -114.686, 19.9477, -48.8471, 30.1324, -17.8639, 31.0829, 13.8938, 20.6097, 47.2006, 23.4784, 209.862, -54.9407, 157.191, -22.4206, 46.4261, -36.4076, 16.2175, -36.4076, -18.6385 )

[node name="FireGaugeArea" type="Area2D" parent="." groups=["350", "FireGauge"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FireGaugeArea"]
position = Vector2( 2.30731, 2.45024 )
scale = Vector2( 0.895549, 1.03282 )
polygon = PoolVector2Array( -23.7446, -48.8471, -24.4066, -165.034, 20.6097, -113.912, 19.9477, -48.8471, 19.9477, -20.1877, 19.9477, 15.4429, 20.6097, 47.2006, 21.9337, 161.064, -22.4206, 113.814, -22.4206, 46.4261, -22.4206, 16.9921, -23.0826, -20.1877 )

[node name="BurningBreathTalentDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BurningBreathTalentDetector"]
shape = SubResource( 4 )

[node name="FlameParticles2D" type="Particles2D" parent="."]
scale = Vector2( 5, 5 )
amount = 7
lifetime = 0.7
explosiveness = 0.2
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_FireSaw_area_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="area_entered" from="BurningBreathTalentDetector" to="." method="_on_BurningBreathTalentDetector_area_entered"]
